configsync/tenants/fltenant1/authorization-policy.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: ns/allow-within-namespace
  name: allow-within-namespace
  namespace: fltenant1 # kpt-set: ${tenant-name}
spec:
  rules:
    - from:
      - source:
          namespaces:
            - "fltenant1" # kpt-set: ${tenant-name}
...
